# IMD-V2

./: CITATION.cff  INSTALL.md  README.md  environment.yml  pyproject.toml
config/: README_CONFIG.md  datasets.yaml  default.yaml  experiments.yaml  models.yaml
data/processed/: ethos_processed.json  hatexplain_processed.json  jigsaw_processed.json  sbic_processed.json  toxigen_processed.json
docs/: API_REFERENCE.md
experiments/: exp_001_anchor_strategy_comparison.py  exp_002_extraction_methods.py  exp_003_cross_dataset_alignment.py  exp_004_model_pairs.py  exp_005_alignment_stability.py  exp_006_scalability.py  exp_007_semantic_preservation.py  exp_008_statistical_significance.py
experiments/analysis/: analyze_results.py  generate_figures.py  statistical_summary.md  statistical_summary.py
experiments/results/: RESULTS_APPENDIX.md  exp_001_anchor_strategy_comparison.json  exp_002_extraction_methods.json  exp_003_cross_dataset_alignment.json  exp_004_model_pairs.json  exp_005_stability.json  exp_006_scalability.json  exp_007_semantic_preservation.json  (+3 more)
isomorphic/: __init__.py  alignment_utils.py  banned_words_extractor.py  config.py  loader.py  pipeline.py  preprocessor.py  real_pipeline.py  runner.py  text_normalization.py
isomorphic_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
papers/: FINDINGS_REPORT.md  MAIN_PAPER.md
scripts/: archive_results.py  compute_statistics.py  generate_figures.py  regenerate_all_results.py  run_experiments.py  run_pipeline.py  setup_datasets.py  validate_reproducibility.py
tests/: conftest.py
(+59 files in other folders)
